--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "terminal-ui",
     "ollama-client", 
-    "python-bridge"
+    "python-bridge",
+    "system-tools"
 ]
 resolver = "2"
 
@@ -20,6 +21,7 @@ reqwest = { version = "0.12", features = ["json", "stream"] }
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 
 # Python integration
 pyo3 = { version = "0.22", features = ["auto-initialize"] }
@@ -41,8 +43,16 @@ edition = "2021"
 terminal-ui = { path = "terminal-ui" }
 ollama-client = { path = "ollama-client" }
 python-bridge = { path = "python-bridge" }
+system-tools = { path = "system-tools" }
 tokio = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 clap = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+reqwest = { workspace = true }
+
+[[bin]]
+name = "debug-ollama"
+path = "debug_ollama.rs"
