--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
     "terminal-ui",
+    "egui-ui",
+    "terminal-emulator",
     "ollama-client", 
     "python-bridge",
     "system-tools"
@@ -34,6 +36,15 @@ tracing-subscriber = "0.3"
 futures-util = "0.3"
 clap = { version = "4.0", features = ["derive"] }
 
+# Time handling
+chrono = { version = "0.4", features = ["serde"] }
+
+# GUI Framework
+egui = "0.28"
+eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence", "x11"] }
+egui_extras = { version = "0.28", features = ["default", "image"] }
+
+
 [package]
 name = "ai-terminal"
 version = "0.1.0"
@@ -41,6 +52,7 @@ edition = "2021"
 
 [dependencies]
 terminal-ui = { path = "terminal-ui" }
+egui-ui = { path = "egui-ui" }
 ollama-client = { path = "ollama-client" }
 python-bridge = { path = "python-bridge" }
 system-tools = { path = "system-tools" }
@@ -52,6 +64,13 @@ clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 reqwest = { workspace = true }
+egui = { workspace = true }
+eframe = { workspace = true }
+egui_extras = { workspace = true }
+
+[[bin]]
+name = "ai-terminal-gui"
+path = "src/gui_main.rs"
 
 [[bin]]
 name = "debug-ollama"
