--- a/python-bridge/Cargo.toml
+++ b/python-bridge/Cargo.toml
@@ -12,3 +12,4 @@ serde_yaml = "0.9"
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+system-tools = { path = "../system-tools" }
